Fix spacing issue with screen

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #title {
-    color: #ffffff;
+    color: #0c0a3e;
     font-family: lieberuth, sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -23,17 +23,23 @@ body {
     justify-content: center;
     background-color: #ffffff;
     width: 400px;
-    height: 550px;
+    height: 600px;
+}
+
+.screen {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    height: 100px;
+    width: 300px;
+    padding-right: 20px;
+    background-color: #cbf3f0;
+    
 }
 
 .total,
 .display {
-    display: flex;
-    justify-content: end;
-    height: 25px;
-    padding: 10px;
-    background-color: #cbf3f0;
-    width: 300px;
+    height: 50px;
     font-family: lieberuth, sans-serif;
     font-style: normal;
 }
